core/roboconf-core/src/test/resources/configurations/valid/instance-with-extra-data.instances

instance of VM {
	name: VM1;
	data.ec2.elastic.ip: 192.168.1.10;
	
	instance of Tomcat {
		name: Tomcat;
	}
}
