core/roboconf-core/src/test/resources/configurations/invalid/inexisting-component.instances
# Overridden exports

instance of VM {
	name: VM1;
	
	instance of Apache {
		name: apache;
	}
	
	instance of Tomcat {
		name: tomcat;
	}
}
